--- a/bonito/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/bonito/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -103,10 +103,10 @@
     <item name="ambient.on">24</item>
 
     <!-- Additional power used when screen is turned on at minimum brightness -->
-    <item name="screen.on">80</item>
+    <item name="screen.on.display0">80</item>
     <!-- Additional power used when screen is at maximum brightness, compared to
          screen at minimum brightness -->
-    <item name="screen.full">320</item>
+    <item name="screen.full.display0">320</item>
 
     <!-- Average power used by the camera flash module when on -->
     <item name="camera.flashlight">242.85</item>
